2002-08-20  Sven Wischnowsky  <wischnow@zsh.org>

	* 17569: Src/Zle/zle_tricky.c: fix typo in comment

	* 17567: Src/Zle/zle_main.c, Src/Zle/zle_thingy.c,
	Src/Zle/zle_tricky.c: fix default completion module loading,
	use compctl if it hasn't been loaded already and no completion
	widgets have been defined

2002-08-19  Oliver Kiddle  <opk@zsh.org>

	* users/5260 (Bill Burton), users/5266: Completion/Unix/Command/_ant:
	with the call-command style parse ant -projecthelp to get targets

	* unposted: Completion/X/Command/_nedit, Completion/Unix/Command/_mail,
	Completion/Unix/Command/_killall, Completion/Unix/Type/_net_interfaces:
	nedit 5.3 adds a -version option and complete for nail,
	killall5, ifup and ifdown using existing functions

2002-08-18  Felix Rosencrantz <f_rosencrantz@yahoo.com>

	* 17562: Completion/Unix/Command/_valgrind: Function for
	Julian Seward's memory checking tool, version 1.0.0.

2002-08-18  Clint Adams  <clint@zsh.org>

	* 17558: Src/Modules/.distfiles, Src/Modules/socket.c,
	Src/Modules/socket.mdd, Doc/Zsh/.distfiles, Doc/Zsh/builtins.yo,
	Doc/Zsh/mod_socket.yo: zsh/net/socket module, including zsocket
	builtin.

2002-08-17  Clint Adams  <clint@zsh.org>

	* unposted: Functions/Prompts/prompt_clint_setup: correct %v typo.

2002-08-14  Peter Stephenson  <pws@csr.com>

	* 17535: Completion/Unix/Command/_make, Doc/Zsh/compsys.yo:
	use-perl style avoids awk frustration.

2002-08-10  Clint Adams  <clint@zsh.org>

	* 17206 (Bruno Bonfils), 17207 (Oliver):
	Completion/Debian/Command/.distfiles,
	Completion/Debian/Command/_auto-apt: completion for auto-apt, with a
	couple of _values tweaks.

2002-08-09  Oliver Kiddle  <opk@zsh.org>

	* 17522: Completion/Debian/Command/_apt-show-versions,
	Completion/Unix/Command/_cdcd, Completion/Unix/Command/_texinfo,
	Completion/Unix/Command/_wget, Completion/Unix/Type/_urls:
	a few function cleanups and handle tkinfo

	* 17521: Completion/Unix/Command/_ant,