@@ -1,3 +1,10 @@
+2002-08-22  Peter Stephenson  <pws@csr.com>
+
+	* 17570: Src/Modules/socket.c, Doc/Zsh/Makefile.in,
+	Doc/Zsh/mod_socket.yo:  Don't use predefined name `sun'; set
+	length parameter for accept(); fix inclusion of socket module
+	in documentation.
+
 2002-08-20  Sven Wischnowsky  <wischnow@zsh.org>
 
 	* 17569: Src/Zle/zle_tricky.c: fix typo in comment
